# transfer-aws-s3-ownership

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
src/: env_vars.py
