[tool.poetry]
name = "transfer-aws-s3-ownership"
version = "0.1.0"
description = ""
authors = ["Alexandre Henrique Afonso Campos <camposalexandreh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.35.46"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
